k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sre-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: docker-rs
      containers:
        - name: frontend
          image: myregistry.com:5000/frontend:v1
            #imagePullPolicy: Never
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sre-lab
spec:
  selector:
    app: frontend
  ports:
    - port: 8000
      targetPort: 8000
  type: NodePort
