k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api
  namespace: sre-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      imagePullSecrets:
        - name: docker-rs
      containers:
        - name: inventory-api
          image: myregistry.com:5000/inventory-api:v1
            #imagePullPolicy: Never
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: inventory-api
  namespace: sre-lab
spec:
  selector:
    app: inventory-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
