k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: sre-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      imagePullSecrets:
        - name: docker-rs
      containers:
        - name: payment-api
          image: myregistry.com:5000/payment-api:v1 
            #imagePullPolicy: Never
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: sre-lab
spec:
  selector:
    app: payment-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
